add signin test